--- a/index1.html
+++ b/index1.html
@@ -1,103 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Home|project0</title>
+  <title>Home|Rubcare </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 		crossorigin="anonymous">
 </head>
 <body>
-<nav class="navbar navbar-expand-sm bg-primary navbar-dark">
-  <ul class="navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Active</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Link</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link disabled" href="#">Disabled</a>
-    </li>
-  </ul>
-</nav>
+
 
 
 <div class="container p-3 my-3 border">
-  <h1>My First Bootstrap Page</h1>
-  <p>This container has a border and some extra padding and margins.</p>
+  <h1>My First Bootstrap PagUnder Constructione</h1>
+ 
 </div>
-<div class="container p-3 my-3 border">
-	<h3> Order List, Unorder List example...
-
-
-	<code>&lt;ul&gt;</code>,<code>&lt;ol&gt;</code></h3>
-	
-	<br>
-    	<div class="row">
-		<div class="col-sm-6" >
-                     <h3> Unorder List</h3>
-			<ul style="background-color:#f6f8fa">
-			  <li>List item1</li>
-			  <li>List item2</li>
-			  <li>List item3</li>
-			</ul> 
-		</div>
-
-		<div class="col-sm-6" >
-  			<h3> Order List</h3>
-			 <ol style="background-color:#f8f4fa">
-			  <li>Active item</li>
-			  <li>Second item</li>
-			  <li>Third item</li>
-			</ol> 
-		</div>
-    </div>
-
-</div>
-<div class="container p-3 my-3 border">
-	<h3> table example </h3>
-
-	<div class="row">
-		<div class="col-sm-6" >
-			<table class="table table-bordered"><tr> <th>colmn1</th><th>colmn2</th></tr>
-				<tr> <td>row1</td><td>row1</td></tr>
-				<tr> <td>row2</td><td>row2</td></tr>
-			</table>
-		</div>
-
-		<div class="col-sm-6" >
-			<table class="table table-bordered table-striped"><tr> <th>colmn1</th><th>colmn2</th></tr>
-				<tr> <td>row1</td><td>row1</td></tr>
-				<tr> <td>row2</td><td>row2</td></tr>
-			</table>
-		</div>
-
-	</div>
-
-
-
-</div>
-<div class="container p-3 my-3 border">
-	<h3> Image example  </h3>
-
-	<div class="row">
-		<div class="col-sm-12" >
-			<img src="images.png">
-				
-		</div>
-
-	</div>
-
-
-
-</div>
-
-
-
-
 
 
 
