--- a/index1.html
+++ b/index1.html
@@ -5,6 +5,13 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" 		crossorigin="anonymous">
+	<style>
+		
+body {
+	line-height: 1;
+	background-color: #f1efe9;
+	overflow-y: scroll;
+	}
 </head>
 <body>
 
