--- a/index1.html
+++ b/index1.html
@@ -21,9 +21,8 @@ color: #282828;
 <body>
 
 <div class="container p-3 my-3 border">
-  <h1>Website Under Constructione</h1>
- 
-</div>
+  <h1>Website Under Constructione..</h1>
+ </div>
 
 </body>
 </html>
